@@ -4,7 +4,7 @@ set -e
 
 # remove debhelper and gem2deb
 if [ -f debian/control ]; then
-  builddeps=$(grep-dctrl -n -s Build-Depends -F Build-Depends -r . debian/control | sed -e 's/,\s*/\n/g; s/^\s*//' | sed '/^\s*$/ d; /debhelper/ d; /gem2deb/ d; s/\n/, /' | tr '\n' ', ')
+  builddeps=$(grep-dctrl -n -s Build-Depends -F Build-Depends -r . debian/control | grep -v '^\s*#' |sed -e 's/,\s*/\n/g; s/^\s*//' | sed '/^\s*$/ d; /debhelper/ d; /gem2deb/ d; s/\n/, /' | tr '\n' ', ')
 else
   builddeps=''
 fi
